chore: return response on useCase